<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addBookManualActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_child_toolbar"
        style="@style/toolbarTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/my_child_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="25dp"
            android:background="@color/browser_actions_bg_grey"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:srcCompat="@mipmap/ic_launcher_foreground" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/isbn"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/isbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/isbn"
                android:ems="10"
                android:inputType="number"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_caps"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/title_caps"
                android:ems="10"
                android:inputType="text"
                android:maxLength="25"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author_caps"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/author_caps"
                android:ems="10"
                android:inputType="text"
                android:maxLength="35"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genre_caps"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="@string/genre_caps"
                android:ems="10"
                android:inputType="text"
                android:maxLength="10"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </ScrollView>

    <com.bookstore.palvindersingh.networkFAB
        android:id="@+id/correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_done_24dp"
        app:backgroundTint="@color/fui_bgPhone"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/arimo"
        android:padding="10dp"
        android:text="Submit"
        android:textColor="#000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/correct"
        app:layout_constraintEnd_toStartOf="@+id/correct" />

</android.support.constraint.ConstraintLayout>