<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addBookActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_child_toolbar"
        style="@style/toolbarTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/my_child_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/arimo"
                android:padding="20dp"
                android:text="@string/is_this_your_book"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/bookImage"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/books"
                android:scaleType="fitXY"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/browser_actions_bg_grey"
                android:divider="?android:listDivider"
                android:orientation="vertical"
                android:showDividers="middle">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:fontFamily="@font/arimo"
                    android:padding="10dp"
                    android:text="About"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/isbn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:fontFamily="@font/arimo"
                    android:padding="10dp"
                    android:text="@string/isbn"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/bookTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arimo"
                    android:padding="10dp"
                    android:text="@string/title"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/bookAuthors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arimo"
                    android:padding="10dp"
                    android:text="@string/authors"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/bookGenres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arimo"
                    android:padding="10dp"
                    android:text="@string/genres"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.bookstore.palvindersingh.networkFAB
        android:id="@+id/correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_done_24dp"
        app:backgroundTint="@color/fui_bgPhone"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_close_24dp"
        app:backgroundTint="@color/fui_bgEmail"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/correct"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/arimo"
        android:padding="10dp"
        android:text="No"
        android:textColor="#000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/wrong"
        app:layout_constraintEnd_toStartOf="@+id/wrong"
        app:layout_constraintTop_toTopOf="@+id/wrong" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/arimo"
        android:padding="10dp"
        android:text="Yes"
        android:textColor="#000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/correct"
        app:layout_constraintEnd_toStartOf="@+id/correct" />

</android.support.constraint.ConstraintLayout>